After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 617745 - iTunes podcasts parsing broken
iTunes podcasts parsing broken
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
Depends on:
Blocks:
 
 
Reported: 2010-05-05 11:38 UTC by Bastien Nocera
Modified: 2010-10-11 21:12 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2010-05-05 11:38:39 UTC
Since the introduction of "iTunes Preview" the RSS feed aren't that easily accessible anymore.
Comment 1 Bastien Nocera 2010-10-11 21:12:36 UTC
commit 40cd5e4eddae32f4b3cffaca2f478ccad053a3e6
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Oct 11 22:10:44 2010 +0100

    Fix parsing of more iTunes Podcast links
    
    https://bugzilla.gnome.org/show_bug.cgi?id=617745