Fix parsing of more iTunes Podcast links

https://bugzilla.gnome.org/show_bug.cgi?id=617745